Fixed pagination buttons on mobile devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -200,9 +200,12 @@ hr {
 }
 
 .pagination-button {
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
 	color: #999;
 	border: 1px solid #e0e0e0;
-	padding: 15px 45px;
+	padding: 10px 20px;
 	display: inline-block;
 	font-size: 16px;
 	font-weight: bold;
@@ -214,6 +217,13 @@ hr {
 
 .pagination-active:hover {
 	background-color: #e0e0e0;
+}
+
+@media (max-width: 30rem) {
+	.pagination-button {
+		padding: 10px 15px;
+		font-size: 0.9rem;
+	}
 }
 
 /*
